# cal_viz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: cal_viz.md  design.md  mcap_format.md  mcap_pointcloud_example.md
src/: main.cpp  stb_impl.cpp
src/bag/: bag_reader.hpp  mcap_reader.cpp  mcap_reader.hpp
src/commands/: args.hpp  project.cpp  project.hpp  unbag.cpp  unbag.hpp
src/msgs/: deserialize.cpp  deserialize.hpp  types.hpp
src/pcd/: pcd_writer.hpp
src/projection/: project.cpp  project.hpp
src/tf/: tf_buffer.cpp  tf_buffer.hpp
